# string_calculator

./: .coveragerc  .gitignore  README.md  app.py  pyproject.toml  run_tests.sh  string_calculator.py  string_calculator_program.py  test_string_calculator.py  test_string_calculator_program.py  test_string_calculator_service.py
application/: string_calculator_program.py
helpers/: json_response.py
scripts/: run_tests.sh
service/: Dockerfile  app.py  requirements.txt
tests/: test_string_calculator.py  test_string_calculator_program.py  test_string_calculator_service.py
