[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "string_calculator"
version = "0.2.0"
description = "A simple String Calculator library with application and Flask service"
authors = [
    { name="Gábor Imolai", email="gimolai@gmail.com" }
]
dependencies = [
    "Flask>=3.0.3"
]

[tool.mypy]
files = ["application", "helpers", "library", "service"]
ignore_missing_imports = true
